# rust_data_pipeline_1

./: Cargo.toml  README.md  env.example
data/: input.json
src/: main.rs
