[package]
name = "rust_data_pipeline_1"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }      
sqlx = { version = "0.8", features = [
    "runtime-tokio",      
    "tls-native-tls",      
    "mysql",              
    "chrono"           
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"     
anyhow = "1.0"    
dotenvy = "0.15"    
chrono = { version = "0.4", features = ["serde"] }   